# xtra

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/: guidelines.md  settings.json
.github/workflows/: ci.yml  codspeed.yml
docs/: index.md
docs/development/: contributing.md
docs/getting-started/: quickstart.md
docs/guide/: async-api.md  llm-extraction.md  ocr-extraction.md  parallel-processing.md  pdf-extraction.md
docs/reference/: configuration.md
scripts/: pre-commit.sh
scripts/ci/: fast-tests.sh  lint.sh  typecheck.sh
tests/: conftest.py  test_azure_di.py  test_azure_di_adapter.py  test_base.py  test_character_mergers.py  test_cli.py  test_coordinates.py  test_easy_ocr.py  test_easy_ocr_adapter.py  test_extractor.py  test_factory.py  test_google_docai.py  test_google_docai_adapter.py  test_integration.py  test_llm_models.py  test_models.py  test_ocr.py  test_paddle_ocr.py  test_paddle_ocr_adapter.py  test_tesseract_ocr.py  test_tesseract_ocr_adapter.py
tests/base/: test_base.py  test_character_mergers.py  test_cli.py  test_coordinates.py  test_extractor.py  test_factory.py  test_geometry.py  test_integration.py  test_models.py  test_optional_imports.py
tests/cassettes/llm/: TestGoogleVCR.test_google_with_schema.yaml
tests/integration/llm/: test_llm_integration.py  test_llm_vcr.py
tests/integration/ocr/: test_easy_ocr.py  test_factory.py  test_ocr.py  test_tesseract_ocr.py
tests/integration/pdf/: test_table_extraction.py
tests/llm/: test_llm_factory.py  test_llm_image_encoder.py  test_llm_integration.py  test_llm_models.py  test_llm_parallel.py  test_llm_prompt.py  test_llm_vcr.py
tests/ocr/: test_azure_di_adapter.py  test_easy_ocr.py  test_easy_ocr_adapter.py  test_google_docai_adapter.py  test_paddle_ocr.py  test_paddle_ocr_adapter.py  test_table_extraction.py  test_tesseract_ocr.py  test_tesseract_ocr_adapter.py
xtra/: __init__.py  cli.py  coordinates.py  llm_factory.py  models.py  text_factory.py
xtra/adapters/: __init__.py  azure_di.py  easy_ocr.py  google_docai.py  tesseract_ocr.py
xtra/extractors/: __init__.py  _image_loader.py  _ocr_base.py  azure_di.py  base.py  character_mergers.py  easy_ocr.py  factory.py  google_docai.py  ocr.py  paddle_ocr.py  pdf.py  tesseract_ocr.py
xtra/extractors/ocr/: paddle_ocr.py
xtra/llm/: __init__.py  factory.py  models.py
xtra/llm/extractors/: anthropic.py  azure_openai.py  google.py  openai.py
xtra/ocr/: __init__.py
xtra/ocr/adapters/: __init__.py  azure_di.py  easy_ocr.py  google_docai.py  paddle_ocr.py  tesseract_ocr.py
xtra/ocr/extractors/: __init__.py  _image_loader.py  azure_di.py  easy_ocr.py  google_docai.py  paddle_ocr.py  tesseract_ocr.py
xtra/utils/: __init__.py  geometry.py
