[tool.poetry]
name = "xtra"
version = "0.1.0"
description = ""
authors = ["SL team <slteam@prestatech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
pypdfium2 = "^5.3.0"
easyocr = "^1.7.2"
azure-ai-documentintelligence = "^1.0.2"
google-cloud-documentai = "^3.0.0"
pytesseract = "^0.3.13"
pydantic = "^2.10.0"
Pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.11"
ty = "^0.0.11"
reportlab = "^4.4.7"

[tool.ruff]
line-length = 100

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint]
select = [
   "E4",
   "E5",
   "E7",
   "E9",
   "F",
   "LOG",
   "PL",
   "S",
   "Q",
   "N",
   "C90",
   "ERA",
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
   "S101", # Use of `assert` detected
   "PLR2004", # Magic value used in comparison
   "S108", # Probable insecure usage of temporary file or directory
   "PLC0415", # Import not at top-level (lazy loading)
]
"**/connectors/*.py" = [
   "PLC0415", # Import not at top-level (lazy loading for optional deps)
]
"**/cli.py" = [
   "C901",    # Function complexity (CLI main function)
   "PLR0912", # Too many branches (CLI main function)
]
"**/azure_di.py" = [
   "PLR2004", # Magic value for polygon length
]
"**/google_docai.py" = [
   "PLR2004", # Magic value for polygon length
   "ERA001",  # Format documentation in docstrings
]
"**/extractors/ocr.py" = [
   "PLC0415", # Import not at top-level (lazy loading)
]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds max-complexity.
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"