[tool.poetry]
name = "xtra"
version = "0.1.0"
description = ""
authors = ["SL team <slteam@prestatech.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
pypdfium2 = "^5.3.0"
pydantic = "^2.10.0"
Pillow = "^11.0.0"
numpy = "^1.26.0"

# Optional OCR dependencies (flexible version ranges for user compatibility)
easyocr = { version = ">=1.4", optional = true }
pytesseract = { version = ">=0.3.8", optional = true }
paddleocr = { version = ">=2.9", optional = true }
paddlepaddle = { version = ">=2.6", optional = true }
azure-ai-documentintelligence = { version = ">=1.0", optional = true }
google-cloud-documentai = { version = ">=3.0", optional = true }

# Optional LLM dependencies
instructor = { version = ">=1.0", optional = true }
openai = { version = ">=1.0", optional = true }
anthropic = { version = ">=0.20", optional = true }
google-genai = { version = ">=1.0", optional = true }

[tool.poetry.extras]
easyocr = ["easyocr"]
tesseract = ["pytesseract"]
paddle = ["paddleocr", "paddlepaddle"]
azure = ["azure-ai-documentintelligence"]
google = ["google-cloud-documentai"]
llm-openai = ["instructor", "openai"]
llm-anthropic = ["instructor", "anthropic"]
llm-google = ["instructor", "google-genai"]
llm-all = ["instructor", "openai", "anthropic", "google-genai"]
all = ["easyocr", "pytesseract", "paddleocr", "paddlepaddle", "azure-ai-documentintelligence", "google-cloud-documentai", "instructor", "openai", "anthropic", "google-genai"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.0.0"
ruff = "^0.14.11"
ty = "^0.0.11"
reportlab = "^4.4.7"

[tool.ruff]
line-length = 100

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint]
select = [
   "E4",
   "E5",
   "E7",
   "E9",
   "F",
   "LOG",
   "PL",
   "S",
   "Q",
   "N",
   "C90",
   "ERA",
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
   "S101", # Use of `assert` detected
   "PLR2004", # Magic value used in comparison
   "S108", # Probable insecure usage of temporary file or directory
   "PLC0415", # Import not at top-level (lazy loading)
]
"**/connectors/*.py" = [
   "PLC0415", # Import not at top-level (lazy loading for optional deps)
]
"**/cli.py" = [
   "C901",    # Function complexity (CLI main function)
   "PLR0912", # Too many branches (CLI main function)
   "S101",    # Use of `assert` for type narrowing after validation
]
"**/azure_di.py" = [
   "PLR2004", # Magic value for polygon length
   "PLC0415", # Import not at top-level (lazy loading for optional deps)
]
"**/google_docai.py" = [
   "PLR2004", # Magic value for polygon length
   "ERA001",  # Format documentation in docstrings
   "PLC0415", # Import not at top-level (lazy loading for optional deps)
]
"**/extractors/easy_ocr.py" = [
   "PLC0415", # Import not at top-level (lazy loading for optional deps)
]
"**/extractors/tesseract_ocr.py" = [
   "PLC0415", # Import not at top-level (lazy loading for optional deps)
]
"**/extractors/paddle_ocr.py" = [
   "PLC0415", # Import not at top-level (lazy loading for optional deps)
]
"**/extractors/__init__.py" = [
   "PLC0415", # Import not at top-level (lazy loading for optional deps)
]
"xtra/__init__.py" = [
   "PLC0415", # Import not at top-level (lazy loading for optional deps)
]
"**/llm/extractors/*.py" = [
   "PLC0415", # Import not at top-level (lazy loading for optional deps)
   "PLR0913", # Too many arguments (unified interface)
]
"**/llm/factory.py" = [
   "PLC0415", # Import not at top-level (lazy loading for factory)
   "PLR0911", # Too many return statements (factory function)
   "PLR0912", # Too many branches (factory function)
   "PLR0913", # Too many arguments (unified interface)
]
"**/extractors/factory.py" = [
   "PLC0415", # Import not at top-level (lazy loading for factory)
   "C901",    # Function complexity (factory function)
   "PLR0911", # Too many return statements (factory function)
   "PLR0912", # Too many branches (factory function)
   "PLR0913", # Too many arguments (unified interface)
]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds max-complexity.
max-complexity = 10

[tool.pytest.ini_options]
# NOTE: Do not add pytest markers to skip tests without explicit user request.
# All tests should run by default to ensure full coverage.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"