[tool.poetry]
name = "xtra"
version = "0.1.0"
description = ""
authors = ["SL team <slteam@prestatech.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = ">=1.0"
Pillow = ">=9.0"
numpy = ">=1.21"

# Optional PDF dependency
pypdfium2 = { version = ">=4.0", optional = true }

# Optional OCR dependencies (flexible version ranges for user compatibility)
easyocr = { version = ">=1.4", optional = true }
pytesseract = { version = ">=0.3.8", optional = true }
paddleocr = { version = ">=2.9", optional = true }
paddlepaddle = { version = ">=2.6", optional = true }
azure-ai-documentintelligence = { version = ">=1.0", optional = true }
google-cloud-documentai = { version = ">=3.0", optional = true }

# Optional LLM dependencies
instructor = { version = ">=1.0", optional = true }
openai = { version = ">=1.0", optional = true }
anthropic = { version = ">=0.20", optional = true }
google-genai = { version = ">=1.0", optional = true }
jsonref = {version = "^1.1.0", optional = true}

[tool.poetry.extras]
pdf = ["pypdfium2"]
easyocr = ["easyocr"]
tesseract = ["pytesseract"]
paddle = ["paddleocr", "paddlepaddle"]
azure = ["azure-ai-documentintelligence"]
google = ["google-cloud-documentai"]
llm-openai = ["instructor", "openai"]
llm-anthropic = ["instructor", "anthropic"]
llm-google = ["instructor", "google-genai", "jsonref"]
llm-all = ["instructor", "openai", "anthropic", "google-genai", "jsonref"]
all = ["pypdfium2", "easyocr", "pytesseract", "paddleocr", "paddlepaddle", "azure-ai-documentintelligence", "google-cloud-documentai", "instructor", "openai", "anthropic", "google-genai", "jsonref"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.0.0"
ruff = "^0.14.11"
ty = "^0.0.11"
reportlab = "^4.4.7"

[tool.ruff]
line-length = 100

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint]
select = [
   # pycodestyle
   "E4",
   "E5",
   "E7",
   "E9",
   # Pyflakes
   "F",
   # flake8-logging
   "LOG",
   # Pylint
   "PL",
   # flake8-bandit (security)
   "S",
   # flake8-quotes
   "Q",
   # pep8-naming
   "N",
   # mccabe complexity
   "C90",
   # eradicate (commented-out code)
   "ERA",
   # flake8-bugbear (common bugs)
   "B",
   # flake8-builtins (shadowing built-ins)
   "A",
   # flake8-debugger (no debugger statements)
   "T10",
   # Ruff-specific rules
   "RUF",
   # flake8-pie (misc lints)
   "PIE",
   # flake8-raise (raise statement checks)
   "RSE",
   # pyupgrade (modernize syntax)
   "UP",
   # isort (import sorting)
   "I",
   # flake8-type-checking (proper import organization)
   "TC",
]
ignore = [
   # TC003 is too aggressive - Path and Sequence are often used at runtime
   "TC003",
   # PLC0415: Import not at top-level - valid pattern for lazy loading optional deps
   "PLC0415",
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
   "S101", # Use of `assert` detected
   "S108", # Probable insecure usage of temporary file or directory
   "PLR2004", # Magic value used in comparison
   "B011", # Do not assert False (tests use this intentionally)
   "B905", # zip without strict (test code)
   "RUF059", # Unused unpacked variable (test fixtures)
]
"**/cli.py" = [
   "C901",    # Function complexity (CLI main function)
   "PLR0912", # Too many branches (CLI main function)
   "S101",    # Use of `assert` for type narrowing after validation
   "E402",    # Module level import not at top (warnings filter must come first)
]
"**/azure_di.py" = [
   "PLR2004", # Magic value for polygon length
]
"**/google_docai.py" = [
   "PLR2004", # Magic value for polygon length
   "ERA001",  # Format documentation in docstrings
]
"**/__init__.py" = [
   "RUF022", # __all__ organized by category, not alphabetically
]
"**/extractors/factory.py" = [
   "TC001",   # BaseExtractor used at runtime (returned from factory)
]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds max-complexity.
max-complexity = 10

[tool.pytest.ini_options]
# NOTE: Do not add pytest markers to skip tests without explicit user request.
# All tests should run by default to ensure full coverage.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    "xtra/llm/extractors/openai.py",
    "xtra/llm/extractors/anthropic.py",
    "xtra/llm/extractors/google.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"